<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartsocket.app.activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="346dp"
        android:layout_height="516dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="453dp">


            <Button
                android:id="@+id/signUpButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkBox1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_up_button"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimaryAuth" />

            <CheckBox

                android:id="@+id/chkBox1"
                android:layout_width="3dp"
                android:layout_height="14dp"
                android:layout_below="@id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-12dp"
                android:layout_marginRight="30dp"
                android:width="20dp"
                android:clickable="false"
                android:fontFamily="sans-serif"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="I agree to the Terms of Service"
                android:textColor="@color/textColor"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square"
                android:contentDescription="TODO"
                tools:ignore="NotSibling" />

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp" />


            <RelativeLayout
                android:id="@+id/relativeLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/signUpEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_emailIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_emailIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/email_input"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgView_emailIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/image_rounded"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    android:tint="@color/white" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/signUpUsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_userIcon"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/username_input"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/image_rounded"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/signUpPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/password_input"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/image_rounded"
                    android:padding="8dp"
                    android:src="@drawable/img_password"
                    android:tint="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="125dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/signUpPasswordConfirmInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon2"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIcon2"
                    android:background="@color/editTextBG"
                    android:hint="@string/confirm_password_input"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgView_passwordIcon2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/image_rounded"
                    android:padding="8dp"
                    android:src="@drawable/img_password"
                    android:tint="@color/white" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/chkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="37dp"
                android:layout_marginRight="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/tos_checkbox"
                android:textColor="@color/textColor" />

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp" />

            <Button
                android:id="@+id/switchToLoginButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="281dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="201dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="sans-serif"
                android:text="@string/already_member"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="13sp"
                app:backgroundTint="@color/white" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryAuth"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register_label"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>
